--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,36 @@
 
     <name>kfirst</name>
 
+    <properties>
+        <kotlin.version>1.8.0</kotlin.version>
+    </properties>
+
+    <dependencies>
+        <dependency>
+            <groupId>khttp</groupId>
+            <artifactId>khttp</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-stdlib-jdk8</artifactId>
+            <version>${kotlin.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlin</groupId>
+            <artifactId>kotlin-test</artifactId>
+            <version>${kotlin.version}</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>org.jetbrains.kotlinx</groupId>
+            <artifactId>kotlinx-html-jvm</artifactId>
+            <version>0.7.5</version>
+        </dependency>
+
+
+    </dependencies>
+
     <repositories>
         <repository>
             <id>github-kotlin-polytech-kotlin-maven</id>
@@ -21,7 +51,13 @@
             <name>vorpal-research-kotlin-maven</name>
             <url>https://maven.vorpal-research.science</url>
         </repository>
+        <repository>
+            <id>jcenter</id>
+            <url>https://jcenter.bintray.com/</url>
+        </repository>
     </repositories>
+
+
 
     <parent>
         <groupId>ru.spbstu</groupId>
@@ -29,7 +65,10 @@
         <version>22.0.0</version>
     </parent>
 
+
     <build>
+        <sourceDirectory>src</sourceDirectory>
+        <testSourceDirectory>test</testSourceDirectory>
         <plugins>
             <plugin>
                 <artifactId>kfirst-runner-plugin</artifactId>
@@ -61,6 +100,30 @@
                         <package>lesson11.task1</package>
                         <package>lesson12.task1</package>
                     </packages>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.jetbrains.kotlin</groupId>
+                <artifactId>kotlin-maven-plugin</artifactId>
+                <version>${kotlin.version}</version>
+                <executions>
+                    <execution>
+                        <id>compile</id>
+                        <phase>compile</phase>
+                        <goals>
+                            <goal>compile</goal>
+                        </goals>
+                    </execution>
+                    <execution>
+                        <id>test-compile</id>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>test-compile</goal>
+                        </goals>
+                    </execution>
+                </executions>
+                <configuration>
+                    <jvmTarget>1.8</jvmTarget>
                 </configuration>
             </plugin>
         </plugins>
